# fwlab

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.en.md  README.md  fwlab.sln
assets/: CMakeLists.txt
assets/materials/: cloth_material.mat  defaultMaterial.mat  specular_glossiness.mat  standard_material.mat
assets/models/RobotDog/: scene.gltf
src/: Application.cpp  Application.h  CMakeLists.txt  Context.h  Editor.cpp  Editor.h  EventDispatcher.cpp  EventDispatcher.h  application.cpp  application.h  main.cpp
src/assets/: CMakeLists.txt  app.aps  app.rc  dummy.c
src/camera/: CMakeLists.txt  Camera.cpp  Camera.h  OrthographicCamera.h  PerspectiveCamera.cpp  perspective_camera.cpp  perspective_camera.h
src/context/: CMakeLists.txt  context.cpp  context.h
src/controller/: CMakeLists.txt  OrbitController.cpp  OrbitController.h
src/core/: BufferAttribute.cpp  BufferAttribute.h  BufferGeometry.cpp  BufferGeometry.h  BufferVector.h  CMakeLists.txt  IDisposable.h  Object3D.cpp  Object3D.h
src/editor/: CMakeLists.txt
src/event/: BaseEvent.cpp  BaseEvent.h  CMakeLists.txt  EventDispatcher.cpp  EventDispatcher.h  EventList.cpp  EventList.h  EventStruct.h  Structure.h
src/event/core/: CMakeLists.txt  ResizeEvent.cpp  ResizeEvent.h
src/geometry/: BoxGeometry.cpp  BoxGeometry.h  CMakeLists.txt  Geometry.cpp  Geometry.h  LinesGeometry.cpp  LinesGeometry.h  PlaneGeometry.cpp  PlaneGeometry.h  PointsGeoemtry.cpp  PointsGeometry.h
src/geometry (2)/: BoxGeometry.cpp  PlaneGeometry.cpp  PlaneGeometry.h
src/gl/: CMakeLists.txt  Context.h  gl.cpp  gl.h
src/gl/camera/: CMakeLists.txt  Camera.cpp  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
src/gl/context/: CMakeLists.txt  context.cpp  context.h
src/gl/core/: BufferAttribute.cpp  BufferAttribute.h  BufferGeometry.cpp  BufferGeometry.h  CMakeLists.txt  Object3D.cpp  Object3D.h
src/gl/geometry/: BoxGeometry.cpp  BoxGeometry.h  CMakeLists.txt  PlaneGeometry.cpp  PlaneGeometry.h
src/gl/helper/: CMakeLists.txt  GridHelper.cpp  GridHelper.h
src/gl/light/: CMakeLists.txt  DirectionalLight.cpp  DirectionalLight.h  FocusedSpotLight.cpp  FocusedSpotLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h  SunLight.cpp  SunLight.h
src/gl/loader/: CMakeLists.txt  FilameshLoader.cpp  FilameshLoader.h  ImageLoader.cpp  ImageLoader.h  Loader.cpp  Loader.h  MeshLoader.cpp  MeshLoader.h  TextureLoader.cpp  TextureLoader.h
src/gl/material/: CMakeLists.txt  ClothMaterial.cpp  ClothMaterial.h  Constant.h  LineBasicMaterial.cpp  LineBasicMaterial.h  LitMaterial.cpp  LitMaterial.h  Material.cpp  Material.h  MeshBasicMaterial.cpp  MeshBasicMaterial.h  PointsMaterial.cpp  PointsMaterial.h  README.md  SpecularGlossinessMaterial.cpp  SpecularGlossinessMaterial.h  StandardMaterial.cpp  StandardMaterial.h  SubsurfaceMaterial.cpp  SubsurfaceMaterial.h  UnlitMaterial.cpp  UnlitMaterial.h
src/gl/math/: CMakeLists.txt  mat4.cpp  mat4.h
src/gl/object/: CMakeLists.txt  Mesh.cpp  Mesh.h  Object3D.h  Skybox.cpp  Skybox.h
src/gl/renderer/: CMakeLists.txt  OpenGLRenderer.cpp  OpenGLRenderer.h
src/gl/scene/: CMakeLists.txt  Scene.cpp  Scene.h
src/gl/texture/: CMakeLists.txt  Texture.cpp  Texture.h
src/gl/utils/: CMakeLists.txt  ImageUtils.cpp  ImageUtils.h  Logger.h  Utils.cpp  Utils.h
src/helper/: CMakeLists.txt  GridHelper.cpp  GridHelper.h
src/light/: AmbientLight.cpp  AmbientLight.h  CMakeLists.txt  DirectionalLight.cpp  DirectionalLight.h  FocusedSpotLight.cpp  FocusedSpotLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h  SunLight.cpp  SunLight.h
src/loader/: CMakeLists.txt  FilameshLoader.cpp  FilameshLoader.h  GltfLoader.cpp  GltfLoader.h  IBL.cpp  IBL.h  ImageLoader.cpp  ImageLoader.h  Loader.h  MeshLoader.cpp  MeshLoader.h  TextureLoader.cpp  TextureLoader.h
src/material/: CMakeLists.txt  ClothMaterial.cpp  ClothMaterial.h  LineBasicMaterial.cpp  LitMaterial.cpp  LitMaterial.h  Material.cpp  Material.h  MeshBasicMaterial.cpp  MeshBasicMaterial.h  SpecularGlossinessMaterial.cpp  SpecularGlossinessMaterial.h  StandardMaterial.cpp  StandardMaterial.h  SubsurfaceMaterial.cpp  SubsurfaceMaterial.h  UnlitMaterial.cpp  UnlitMaterial.h
src/material/mat/: cloth.mat
src/math/: CMakeLists.txt  mat4.cpp  mat4.h
src/object/: CMakeLists.txt  Line.cpp  Line.h  Mesh.cpp  Mesh.h  Object3D.cpp  Object3D.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  Skybox.cpp  Skybox.h  Triangle.cpp  Triangle.h  skybox.cpp  triangle.cpp
src/object/sky/: CMakeLists.txt  SkyBox.cpp  SkyBox.h
src/scene/: AnimationScene.cpp  AnimationScene.h  BoxScene.cpp  BoxScene.h  CMakeLists.txt  ImGuiScene.cpp  ImGuiScene.h  RobotDogScene.cpp  RobotDogScene.h  Scene.cpp  Scene.h  SceneGraph.cpp  SceneGraph.h  SuzanneScene.cpp  SuzanneScene.h  scene.cpp  scene.h
src/scene/assets/: CMakeLists.txt
src/scene/background/: CMakeLists.txt
src/scene/materials/: defaultMaterial.mat
src/scene/object/: CMakeLists.txt  triangle.h
src/serialization/: BaseSerializer.cpp  BaseSerializer.h  CMakeLists.txt  Convert.cpp  Convert.h
src/texture/: CMakeLists.txt  Texture.cpp  Texture.h
src/ui/: CMakeLists.txt  Component.cpp  Component.h  ImGuiHelper.cpp  UIHelper.cpp  UIHelper.h
src/ui/dialog/: CMakeLists.txt  OpenFileDialog.cpp  OpenFileDialog.h  SaveFileDialog.cpp  SaveFileDialog.h
src/ui/framerate/: CMakeLists.txt  Framerate.cpp  Framerate.h
src/ui/menu/: CMakeLists.txt
src/ui/menubar/: CMakeLists.txt  EditMenu.cpp  EditMenu.h  ExperimentMenu.cpp  ExperimentMenu.h  FileMenu.h  (+13 more)
src/utils/: CMakeLists.txt  Clock.cpp  Clock.h  DirectoryUtils.cpp  DirectoryUtils.h  EncodingUtils.cpp  EncodingUtils.h  ImageUtils.cpp  ImageUtils.h  LogUtils.h  Logger.cpp  Logger.h  SDLUtils.cpp  SDLUtils.h  SystemUtils.cpp  SystemUtils.h  TimeUtils.cpp  TimeUtils.h  Utils.cpp  Utils.h  encoding_utils.cpp  encoding_utils.h
src/utils (2)/: CMakeLists.txt  ImageUtils.cpp  Logger.cpp  TimeUtils.cpp  TimeUtils.h  Utils.cpp  Utils.h
(+43 files in other folders)
